# py-fastapi

./: .gitignore  README.md  alembic.ini  bkp-env.txt  env.txt  pyproject.toml
alembic/: env.py  script.py.mako
alembic/versions/: b626ddfd7233_.py
app/: config.py  database.py  main.py  test_main.py
app/config/: Settings.py
app/database/: db.py
app/models/: tasks.py  user.py
app/routers/: tasks.py  user.py
app/templates/: index.html
src/app/: config.py  database.py  main.py  models.py
src/app/routers/: tasks.py
src/app/templates/: index.html
