[project]
name = "py-fastapi"
version = "0.1.0"
description = "FastAPI, SQLModel and Alembic"
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "alembic>=1.16.4",
    "fastapi[all]>=0.116.1",
    "sqlmodel>=0.0.24",
]

[dependency-groups]
dev = [
    "pytest>=8.4.1",
    "ruff>=0.12.10",
    "taskipy>=1.14.1",
]

[tool.fastapi]
app = "src.app.main:app"

[tool.ruff]
line-length = 79
extend-exclude = [".venv", "docs", "alembic"]

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT"]

[tool.ruff.format]
quote-style = "single"

[tool.taskipy.tasks]
format = "ruff check --fix && ruff format ."
migrate = "alembic revision --autogenerate && alembic upgrade head"
clear-migrations = "rm -rf alembic/versions/*"
dev = "fastapi dev src/app/main.py"
run = "fastapi run src/app/main.py"
