[project]
name = "py-fastapi"
version = "0.1.0"
description = "FastAPI, SQLModel and Alembic."
authors = [
    {name = "Renato Cruz", email = "natorsc@gmail.com"},
]
requires-python = ">=3.12,<3.15"
readme = "README.md"
license = {text = "MIT"}
dependencies = ["alembic>=1.17.2", "fastapi[all]>=0.128.0", "sqlmodel>=0.0.31"]

[dependency-groups]
dev = [
    "ruff>=0.14.10",
]

[tool.pdm]
distribution = false

[tool.pdm.scripts]
format = {composite = [
    "ruff check .",
    "ruff format .",
]}
migrate = {composite = [
    "alembic revision --autogenerate",
    "alembic upgrade head",
]}
reset-migrations = {composite = [
    "alembic stamp base",
    "find alembic/versions/ -mindepth 1 -delete",
]}
dev = "fastapi dev src/app/main.py"
run = "fastapi run src/app/main.py"

# [tool.fastapi]
# app = "src.app.main:app"

[tool.ruff]
fix = true
extend-exclude = ["docs", ".venv", ".pdm-build", "__pycache__"]
line-length = 79

[tool.ruff.format]
quote-style = "single"

[tool.ruff.lint]
select = ["I", "F", "E", "W", "PL", "PT", "UP", "E501"]
